--- a/src/main/resources/templates/medicine/overview.html
+++ b/src/main/resources/templates/medicine/overview.html
@@ -3,11 +3,12 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>medicine Manager</title>
+    <title>Medicine Manager</title>
 </head>
 <body>
+<a href="/" style="position: absolute; left: 10px; top: 10px;">Terug</a>
 <div align="center">
-    <h1>Patient List</h1>
+    <h1>Medicine List</h1>
     <a href="/medicines/new">Create New Medicine</a>
     <br/><br/>
     <table border="1" cellpadding="10">
@@ -37,5 +38,10 @@
         </tbody>
     </table>
 </div>
+<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" rel="stylesheet">
+<script crossorigin="anonymous"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
