--- a/src/main/resources/templates/patient/new_patient.html
+++ b/src/main/resources/templates/patient/new_patient.html
@@ -2,42 +2,50 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Create New Patient</title>
 </head>
 <body>
+<a href="/patients/" style="position: absolute; left: 10px; top: 10px;">Terug</a>
 <div align="center">
     <h1>Create New Patient</h1>
-    <br />
-    <form action="#" th:action="@{/patients/save}" th:object="${patient}"
-          method="post">
+    <br/>
+    <form action="#" method="post" th:action="@{/patients/save}"
+          th:object="${patient}">
 
         <table border="0" cellpadding="10">
             <tr>
                 <td>First name:</td>
-                <td><input type="text" th:field="*{firstName}" /></td>
+                <td><input th:field="*{firstName}" type="text"/></td>
             </tr>
             <tr>
                 <td>Last name:</td>
-                <td><input type="text" th:field="*{lastName}" /></td>
+                <td><input th:field="*{lastName}" type="text"/></td>
             </tr>
             <tr>
                 <td>Age:</td>
-                <td><input type="number" th:field="*{age}" /></td>
+                <td><input th:field="*{age}" type="number"/></td>
             </tr>
             <tr>
                 <td>Weight (kg):</td>
-                <td><input type="number" th:field="*{weight}" /></td>
+                <td><input th:field="*{weight}" type="number"/></td>
             </tr>
             <tr>
                 <td>Length (cm):</td>
-                <td><input type="number" th:field="*{length}" /></td>
+                <td><input th:field="*{length}" type="number"/></td>
             </tr>
             <tr>
-                <td colspan="2"><button type="submit">Save</button> </td>
+                <td colspan="2">
+                    <button type="submit">Save</button>
+                </td>
             </tr>
         </table>
     </form>
 </div>
+<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" rel="stylesheet">
+<script crossorigin="anonymous"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
