--- a/src/main/resources/templates/patient/overview.html
+++ b/src/main/resources/templates/patient/overview.html
@@ -6,6 +6,7 @@
     <title>Patient Manager</title>
 </head>
 <body>
+<a href="/" style="position: absolute; left: 10px; top: 10px;">Terug</a>
 <div align="center">
     <h1>Patient List</h1>
     <a href="/patients/new">Create New Patient</a>
@@ -40,6 +41,11 @@
         </tr>
         </tbody>
     </table>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" rel="stylesheet">
+    <script crossorigin="anonymous"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </div>
 </body>
 </html>
