--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>ADSD Semester 1</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
 <div style="margin: 10px;">
-    <a href="/patients/">Patiënten overzicht</a>
+    <a th:href="@{/patients/}" th:text="#{nav.patientOverview}"></a>
     <br>
-    <a href="/medicines/">Medicijnen overzicht</a>
+    <a th:href="@{/medicines/}" th:text="#{nav.medicineOverview}"></a>
 </div>
 <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" rel="stylesheet">
